<resources>
    <string name="app_name">Заметки</string>
    <string name="button_add">Добавить</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_edit">Правка</string>
    <string name="button_delete">Удалить</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="version">Версия: </string>
    <string name="menu_string">"Заметки: "</string>
    <string name="menu_settings_item">Настройки</string>
    <string name="menu_about_item">О программе</string>
    <string name="Search">Поиск</string>
    <string name="popup_menu_view">Просмотр</string>
    <string name="popup_menu_edit">Правка</string>
    <string name="popup_menu_delete">Удалить</string>
    <string name="logo">Logo</string>
    <string name="textViewTextSize">Размер шрифта</string>
    <string name="textViewSortType">Сортировка заметок</string>
    <string name="textAbout"><![CDATA[<p>Программа Заметки реализована с целью обучения возможносетй языка Java в разарботке Android.</p>
<p><br />Возможности программы:</p>
<ol>
<li>Добавление заметок</li>
<li>Просмотр заметок</li>
<li>Удаление заметок</li>
<li>Поиск заметки по тексту</li>
<ul>
<li>Сортировка заметок по:<br />Дате создания</li>
<li>Дате редактирования</li>
<li>Содержанию</li>
<li>Установки кол-ва строк заметки в списке</li>
</ul>
</ol>
<p><br />История версии:</p>
<ol>
<li>Создайние класса данных со структурой заметок.<br />Создайние фрагмент для вывода этих данных.<br />Встраивание этого фрагмента в активити<br />Добавление фрагмента, в котором открывается заметка: если нажать на элемент списка в портретной ориентации - открывается новое окно, если нажать в ландшафтной - окно открывается рядом.</li>
<li>Создание бокового навигационного меню для приложения<br />Создание полноценного заголовока для NavigationDrawer<br />Создание карточки для элемента списка.</li>
<li>Добавленеи RecyclerView для отображения списка.<br />Создание карточки заметки<br />Добавление FloatingActionButton</li>
<li>Добавление контекстного меню для карточки заметки<br />Обёртываение фрагмента с Datepicker в стиль диалога<br />Добавление авторазвёртывания заметки в списке</li>
</ol>]]></string>

    <string name="textViewNoSearchResult">"Нет результатов поиска для запроса: "</string>
    <string name="button_add_1000">1000</string>
    <string name="ClearlListNotes">Очистить список заметок</string>
    <string name="EmptyListNotes">Ещё нет ни одной заметки. Добавьте прямо сейчас</string>
    <string name="ButtonAddNote">Добавить заметку</string>
    <string name="ButtonAdd1000">Добавить 1000 заметок</string>
    <string name="MaxCountLines">Кол-во строк в списке</string>
    <string name="ImageViewDescriptionMenu">Menu</string>
    <string name="textViewAuthBy">Вы авторизованы через:</string>
    <string name="sign_out">Выйти</string>
    <string name="textViewYouCan">Вы можете авторизоваться через:</string>
    <string name="sign_in_vk">VK</string>
    <string name="switchAuth">Облачная синхронизация</string>
    <string name="buttonAuth">Настройки синхронизации</string>
    <string name="imageviewava">imageViewAva</string>
    <string name="textViewAuthByVK">Вы авторизованы через VK</string>
    <string name="textViewAuthByGoogle">Вы авторизованы через Google</string>
    <string name="textViewAuthByNONE">Вы не авторизованы</string>
    <integer name="com_vk_sdk_AppId">7891094</integer>
</resources>