<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/frameListNotes" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LinearLayoutEmprtyListNotesRV"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewEmprtyListNotesRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_note_view"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/EmptyListNotes"
            android:textSize="@dimen/textSizeInterface"
            tools:text="Ещё нет ни одной заметки. Добавьте прямо сейчас" />

        <Button
            android:id="@+id/button_addFirstNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonAddNote" />

        <Button
            android:id="@+id/button_addFirst1000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonAdd1000" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_lines"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/item_note_by_rv">

    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>
